[package]
name = "dht-sensor"
version = "0.2.1"
description = "Driver for the DHT11/DHT22 sensor based on embedded-hal"
authors = ["Michael Beaumont <mjboamail@gmail.com>"]
keywords = ["embedded", "sensor", "humidity", "temperature", "embedded-hal-driver"]
categories = ["embedded", "no-std", "hardware-support"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/michaelbeaumont/dht-sensor"
exclude = [
  ".github",
  "nucleo.cfg",
  "openocd.gdb",
  "memory.x",
  ".gitignore",
]

[features]
async = ["embedded-hal-async"]

[dependencies]
embedded-hal = {version = "^0.2.4", features = ["unproven"]}
embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }

[dev-dependencies]
stm32f0xx-hal = {version = "^0.18.0", features = ["stm32f042"]}
cortex-m = "^0.7.7"
cortex-m-rt = "^0.7.3"
cortex-m-semihosting = "^0.5.0"
panic-halt = "^0.2.0"

[profile.release]
codegen-units = 1
debug = true
lto = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
