[package]
name = "dht-sensor"
version = "0.2.1"
description = "Driver for the DHT11/DHT22 sensor based on embedded-hal"
authors = ["Michael Beaumont <mjboamail@gmail.com>"]
keywords = ["embedded", "sensor", "humidity", "temperature", "embedded-hal-driver"]
categories = ["embedded", "no-std", "hardware-support"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/michaelbeaumont/dht-sensor"
exclude = [
  ".github",
  "nucleo.cfg",
  "openocd.gdb",
  "memory.x",
  ".gitignore",
]

[features]
async = ["embedded-hal-async"]

[dependencies]
embedded-hal = "1"
embedded-hal-async = { version = "1", optional = true }
defmt = { version = "1.0", optional = true }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
